Fixed an error with navigation visibility when we are deploying with Liferay GA4 and SDK, reported by: patsoftware

--- a/docroot/_diffs/css/custom.css
+++ b/docroot/_diffs/css/custom.css
@@ -326,6 +326,10 @@ $solidMainColor: #C82425;
 			}
 		}
 
+		#navigation {
+			display: block;
+		}
+
 		.hamburger-icon {
 			padding: 12px 20px;
 			margin: 0;
